--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,11 @@
 alembic==1.0.7
+arrow==0.14.0
 astroid==2.1.0
 bleach==3.1.0
 certifi==2018.11.29
 chardet==3.0.4
 Click==7.0
+dateparser==0.7.1
 dominate==2.3.5
 Flask==1.0.2
 Flask-Bootstrap==3.3.7.1
@@ -24,14 +26,19 @@ Mako==1.0.7
 Markdown==3.0.1
 MarkupSafe==1.1.0
 mccabe==0.6.1
+moment==0.8.2
 psycopg2==2.7.7
 pylint==2.2.2
 python-dateutil==2.8.0
 python-editor==1.0.4
+pytz==2019.1
+regex==2019.6.2
 requests==2.21.0
 six==1.12.0
 SQLAlchemy==1.2.18
+times==0.7
 typed-ast==1.3.1
+tzlocal==1.5.1
 urllib3==1.24.1
 visitor==0.1.3
 webencodings==0.5.1
